third_party/vendor/async-stream-0.3.2/tests/ui/yield_in_closure.stderr
error[E0658]: yield syntax is experimental
 --> $DIR/yield_in_closure.rs:7:17
  |
7 |                 yield v;
  |                 ^^^^^^^
  |
  = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information

error[E0277]: expected a `FnOnce<(&str,)>` closure, found `[generator@$DIR/src/lib.rs:201:9: 201:67]`
 --> $DIR/yield_in_closure.rs:6:14
  |
6 |             .and_then(|v| {
  |              ^^^^^^^^ expected an `FnOnce<(&str,)>` closure, found `[generator@$DIR/src/lib.rs:201:9: 201:67]`
  |
  = help: the trait `FnOnce<(&str,)>` is not implemented for `[generator@$DIR/src/lib.rs:201:9: 201:67]`

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
